2005-06-21  Christian Meyer  <chrisime@gnome-de.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in: Added
	support for Vida Linux OS 1.2

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: applied patch to update /etc/timezone in debian based
	systems. Fixes #167035

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added support for WEP key type (ASCII or hexa)

2005-05-15  Christian Meyer  <chrisime@gnome-de.org>

	* network.pl.in: fix small issue with dhcpcd

2005-04-13  Scott J. Harmon  <harmon@ksu.edu>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in:
	Added support for Slackware 10.1.0

2005-04-12  Joe Marcus Clarke  <marcus@freebsd.org>

	* network.pl.in: Fixed FreeBSD network tool support

2005-04-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ABOUT-NLS: Added
	* configure.in, autogen.sh: removed gnome-autogen.sh dependencies

2005-04-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* sync'ed contents with the current gnome.org server

2005-04-03  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS (again, sorry!). Must have glitched or stroked or something.

2005-04-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* configure.in: Removed "rw" from ALL_LINGUAS, it seems it wasn't
	added...

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-25  Carlos Garnacho Parro  <carlosg@gnome.org>

       * network.pl.in: Fixed a bug when dealing with dhclient v3, the -e
       	option doesn't make the same than in dhclient v2.

2005-03-15  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-03-15  Carlos Garnacho Parro  <carlosg@gnome.org>
