@@ -68,6 +68,7 @@ $version = "@VERSION@";
               "mandrake-10.0", "mandrake-10.1",
               "blackpanther-4.0",
               "debian-2.2", "debian-3.0", "debian-sarge",
+	      "ubuntu-5.04",
               "suse-7.0", "suse-9.0", "suse-9.1",
               "turbolinux-7.0", "fedora-1", "fedora-2", "fedora-3", "specifix",
               "pld-1.0", "pld-1.1", "pld-1.99",
