@@ -492,6 +492,7 @@ sub gst_network_get_broadcast_ping_cmd
        "debian-2.2"   => "debian-2.2",
        "debian-3.0"   => "debian-2.2",
        "debian-sarge" => "debian-2.2",
+       "ubuntu-5.04" => "debian-2.2",       
        "mandrake-7.1" => "debian-2.2",
        "mandrake-7.2" => "debian-2.2",
        "mandrake-9.0" => "debian-2.2",
@@ -1782,6 +1783,7 @@ sub gst_network_get_file
     "debian-2.2"   => \&gst_network_deb22_get_file,
     "debian-3.0"   => \&gst_network_deb22_get_file,
     "debian-sarge" => \&gst_network_deb22_get_file,
+    "ubuntu-5.04" => \&gst_network_deb22_get_file,    
     "suse-7.0"     => \&gst_network_suse70_get_file,
     "suse-9.0"     => \&gst_network_deb22_get_file,
     "suse-9.1"     => \&gst_network_deb22_get_file,
@@ -3868,6 +3870,7 @@ sub gst_network_ensure_loopback_interface
 	  "debian-2.2"   => "lo",
     "debian-3.0"   => "lo",
     "debian-sarge" => "lo",
+    "ubuntu-5.04" => "lo",    
     "suse-7.0"     => "",
     "suse-9.0"     => "",
     "suse-9.1"     => "",
@@ -3995,6 +3998,7 @@ sub gst_network_get_parse_table
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-2.2",
     "debian-sarge" => "debian-2.2",
+    "ubuntu-5.04" => "debian-2.2",
     "suse-7.0"     => "suse-7.0",
     "suse-9.0"     => "suse-9.0",
     "suse-9.1"     => "suse-9.0",
@@ -4437,6 +4441,7 @@ sub gst_network_get_interface_parse_table
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-3.0",
     "debian-sarge" => "debian-3.0",
+    "ubuntu-5.04" => "debian-3.0",
     "suse-7.0"     => "suse-7.0",
     "suse-9.0"     => "suse-9.0",
     "suse-9.1"     => "suse-9.0",
@@ -5310,6 +5315,7 @@ sub gst_network_get_replace_table
     "debian-2.2"   => "debian-2.2",
     "debian-3.0" => "debian-2.2",
     "debian-sarge" => "debian-2.2",
+    "ubuntu-5.04" => "debian-2.2",
     "suse-7.0"     => "suse-7.0",
     "suse-9.0"     => "suse-9.0",
     "suse-9.1"     => "suse-9.0",
@@ -5739,6 +5745,7 @@ sub gst_network_get_interface_replace_table
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-3.0",
     "debian-sarge" => "debian-3.0",
+    "ubuntu-5.04" => "debian-3.0",
     "suse-7.0"     => "suse-7.0",
     "suse-9.0"     => "suse-9.0",
     "suse-9.1"     => "suse-9.0",
