@@ -76,7 +76,8 @@ sub gst_service_sysv_get_paths
        "debian-2.2"   => ["$gst_prefix/etc", "$gst_prefix/etc/init.d", "../init.d"],
        "debian-3.0"   => ["$gst_prefix/etc", "$gst_prefix/etc/init.d", "../init.d"],
        "debian-sarge" => ["$gst_prefix/etc", "$gst_prefix/etc/init.d", "../init.d"],
-
+       "ubuntu-5.04" => ["$gst_prefix/etc", "$gst_prefix/etc/init.d", "../init.d"],       
+       
        "suse-7.0"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d", "../"],
        "suse-9.0"     => ["$gst_prefix/etc/init.d", "$gst_prefix/etc/init.d", "../"],
        "suse-9.1"     => ["$gst_prefix/etc/init.d", "$gst_prefix/etc/init.d", "../"],
@@ -137,7 +138,8 @@ sub gst_service_sysv_get_runlevels
        "debian-2.2"     => [2, 3],
        "debian-3.0"     => [2, 3],
        "debian-sarge"   => [2, 3],
-
+       "ubuntu-5.04"   => [2, 3],       
+       
        "suse-7.0"       => [3, 5],
        "suse-9.0"       => [3, 5],
        "suse-9.1"       => [3, 5],
@@ -197,7 +199,8 @@ sub gst_service_get_verbose_runlevels
      "debian-2.2"     => "debian-2.2",
      "debian-3.0"     => "debian-2.2",
      "debian-sarge"   => "debian-2.2",
-     
+     "ubuntu-5.04"   => "debian-2.2",     
+          
      "suse-7.0"       => "redhat-5.2",
      "suse-9.0"       => "redhat-5.2",
      "suse-9.1"       => "redhat-5.2",
@@ -1578,7 +1581,8 @@ sub gst_service_get_status
        "debian-2.2"   => \&gst_service_debian_get_status,
        "debian-3.0"   => \&gst_service_debian_get_status,
        "debian-sarge" => \&gst_service_debian_get_status,
-       
+       "ubuntu-5.04" => \&gst_service_debian_get_status,
+              
        "redhat-5.2"   => \&gst_service_redhat_get_status,
        "redhat-6.0"   => \&gst_service_redhat_get_status,
        "redhat-6.1"   => \&gst_service_redhat_get_status,
