@@ -1,3 +1,10 @@
+2005-06-30  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in:
+	Added patch from the KUbuntu people for the network backend, should
+	search the rest of the Ubuntu patches and apply them... Thanks to the
+	KUbuntu team :)
+
 2005-06-21  Christian Meyer  <chrisime@gnome-de.org>
 
 	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
